Changed a few element's position to absolute Changed some element's position to absolute so that element sticks to it's position instead of shifting. Also added @media to prevent issues when the window is sized too narrow.

--- a/index.css
+++ b/index.css
@@ -24,20 +24,25 @@ label {
 }
 
 .container {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
+    position: relative;
 }
 
-img {
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
     height: 100vh;
-    width: auto;
-    max-width: 60%;
+    background-image: url(photos/burger.JPG);
+    background-size: cover;
+    background-position: 55% center;
 }
 
 .right-content {
-    min-width: 80%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
 }
 
 .form-header h1 {
@@ -82,4 +87,13 @@ input[type="button"] {
     border: 2px solid white;
     color: black;
     background-color: white;
+}
+
+@media (max-width: 768px) {
+    .background-image,
+    .right-content {
+        position: static;
+        width: 100%;
+        height: auto;
+    }
 }
